tests/snapshots/examples_basics/comments.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/comments.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found ||.

  --> examples/basics/comments.flx:85:16
   |
85 | let doubled = [||];
   |                ^^
== stdout ==
<not executed>
